# website

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  depot.json  docker-compose.yml  hello.py  pyproject.toml  pytest.ini
.depot/workflows/: build.yaml  concurrency.yaml  deploy.yaml
.github/workflows/: benchmark_linux_macos_decompress.yaml.unused  build.yaml  build.yaml.unused  deploy.yaml  migrate-secrets-to-depot-ci-1779939746637.yml  php.yaml  php.yaml.unused  test.yaml
about_me/: admin.py  models.py  urls.py  views.py
about_me/migrations/: 0001_initial.py
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_category_options_alter_post_body.py  0003_post_intro.py
k8s_conf/cloudflare/: cloudflare_svc.yaml  cloudflared.yaml
k8s_conf/postgres/: helper-pod.yaml  postgres.yaml  postgres_pvc.yaml  postgres_svc.yaml  (+1 more)
nginx/: Dockerfile  nginx.conf
opentofu/: Dockerrun.aws.json.tftpl  Dockerrun.aws.json.tpl  database.tofu  ecr.tofu  instance_profile.tofu  locals.tofu  main.tofu  network.tofu  providers.tofu  s3.tofu  variables.tofu
resume/: admin.py  models.py  views.py
static/: custom.0f4ae79d78d3.css  custom.256c39d7b75b.css  custom.3c4b8545201f.css  custom.51e8dca22b3e.css  custom.64765e493b68.css  custom.6679b04482ae.css  custom.6ad14814f405.css  custom.7205b0109cd7.css  custom.72d0d7f7e220.css  custom.7933345e69c0.css  custom.8194450c4e43.css  custom.9ca195b1e564.css  custom.c68f1edd4e30.css  custom.d41eb0eb4e43.css  custom.d8a46d7e8b82.css  custom.e03a7c86af4e.css  custom.f9fa6cb7e896.css  staticfiles.json
templates/: base.html
website/: settings.py  urls.py
(+23 files in other folders)
