[project]
name = "django-website"
version = "1.0.0"
description = "A little personal website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asgiref>=3.8.1",
  "django>=5.2.1",
  "django-markdownx==4.0.7",
  "django-storages>=1.14.6",
  "gunicorn>=23.0.0",
  "markdown==3.7",
  "psycopg>=3.2.9",
  "psycopg-binary>=3.2.9",
  "pygments>=2.19.2",
  "sqlparse>=0.5.3",
  "whitenoise>=6.9.0",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-django>=4.11.1"]
