[project]
name = "django-website"
version = "1.1.0"
description = "A little personal website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "asgiref>=3.8.1,<4",
  "django>=5.2.1,<6",
  "django-markdownx>=4.0.7,<5",
  "django-storages>=1.14.6,<2",
  "gunicorn>=25.0.0",
  "markdown>=3.7,<4",
  "psycopg>=3.2.9,<4",
  "psycopg-binary>=3.2.9,<4",
  "pygments>=2.19.2,<3",
  "sqlparse>=0.5.3,<1",
  "whitenoise>=6.9.0,<7",
]

[dependency-groups]
dev = ["pytest>=8.3.5,<9", "pytest-django>=4.11.1,<5"]
